--- a/sm-dao/pom.xml
+++ b/sm-dao/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.0.Final</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
