--- a/sm-dao/pom.xml
+++ b/sm-dao/pom.xml
@@ -16,7 +16,7 @@
 	</properties>
 
 	<dependencies>
-	
+
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -38,6 +38,12 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Hibernate -->
 		<dependency>
@@ -52,28 +58,25 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.195</version>
 		</dependency>
-		
+
 		<!-- Javax -->
 		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
-    <dependency>
+		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.0.Final</version>
 		</dependency>
-		
-		<!-- JUnit -->
+
+		<!-- TestNG -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
 			<scope>test</scope>
 		</dependency>
-
-		
-    
 	</dependencies>
 </project>
