--- a/sm-dao/pom.xml
+++ b/sm-dao/pom.xml
@@ -78,5 +78,12 @@
 			<version>6.14.3</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Other -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.2</version>
+		</dependency>
 	</dependencies>
 </project>
