--- a/sm-dao/pom.xml
+++ b/sm-dao/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
 
 		<!-- TestNG -->
 		<dependency>
