--- a/sm-service/pom.xml
+++ b/sm-service/pom.xml
@@ -39,5 +39,12 @@
 			<version>${springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>uk.co.jemos.podam</groupId>
+			<artifactId>podam</artifactId>
+			<version>2.3.5.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
