--- a/sm-rest/pom.xml
+++ b/sm-rest/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>sm-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>cz.fi.muni.pa165.soccermanager</groupId>
+			<artifactId>sm-sample-data</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
