--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 		<springframework.version>5.1.0.RELEASE</springframework.version>
 	</properties>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.1.RELEASE</version>
+		<relativePath/>
+	</parent>
+
 	<dependencies>
 	
 		<!-- Logging -->
@@ -72,18 +79,43 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<!--<build>-->
+		<!--<pluginManagement>-->
+			<!--<plugins>-->
+				<!--<plugin>-->
+					<!--<groupId>org.apache.maven.plugins</groupId>-->
+					<!--<artifactId>maven-compiler-plugin</artifactId>-->
+					<!--<configuration>-->
+						<!--<compilerArgument>-Xlint:unchecked,deprecation</compilerArgument>-->
+					<!--</configuration>-->
+				<!--</plugin>-->
+				<!--&lt;!&ndash; embedded Tomcat 9 plugin configuration, use "mvn cargo:run" to run &ndash;&gt;-->
+				<!--<plugin>-->
+					<!--<groupId>org.codehaus.cargo</groupId>-->
+					<!--<artifactId>cargo-maven2-plugin</artifactId>-->
+					<!--<version>1.7.0</version>-->
+					<!--<configuration>-->
+						<!--<container>-->
+							<!--<containerId>tomcat9x</containerId>-->
+							<!--<artifactInstaller>-->
+								<!--<groupId>org.apache.tomcat</groupId>-->
+								<!--<artifactId>tomcat</artifactId>-->
+								<!--<version>${tomcat.version}</version>-->
+							<!--</artifactInstaller>-->
+						<!--</container>-->
+					<!--</configuration>-->
+				<!--</plugin>-->
+				<!--&lt;!&ndash; workaround for broken OpenJDK 8u181-b13-2 on Debian/Ubuntu which causes-->
+                     <!--unit tests to fail, see https://issues.apache.org/jira/browse/SUREFIRE-1588 &ndash;&gt;-->
+				<!--<plugin>-->
+					<!--<groupId>org.apache.maven.plugins</groupId>-->
+					<!--<artifactId>maven-surefire-plugin</artifactId>-->
+					<!--<configuration>-->
+						<!--<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>-->
+					<!--</configuration>-->
+				<!--</plugin>-->
+			<!--</plugins>-->
+		<!--</pluginManagement>-->
+	<!--</build>-->
 
 </project>
