--- a/sm-rest/pom.xml
+++ b/sm-rest/pom.xml
@@ -72,9 +72,13 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-
-
-
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${springframework.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -94,8 +98,18 @@
 					<container>
 						<containerId>tomcat9x</containerId>
 					</container>
-
+					<deployables>
+				    <deployable>
+				        <groupId>${project.groupId}</groupId>
+				        <artifactId>${project.artifactId}</artifactId>
+				        <type>war</type>
+				        <properties>
+				            <context>pa165</context>
+				        </properties>
+				    </deployable>
+				</deployables>
 				</configuration>
+				
 			</plugin>
 		</plugins>
 	</build>
