Initial angular module added

--- a/sm-rest/pom.xml
+++ b/sm-rest/pom.xml
@@ -94,7 +94,16 @@
 					<container>
 						<containerId>tomcat9x</containerId>
 					</container>
-
+					<deployables>
+						<deployable>
+							<groupId>${project.groupId}</groupId>
+							<artifactId>${project.artifactId}</artifactId>
+							<type>war</type>
+							<properties>
+								<context>pa165</context>
+							</properties>
+						</deployable>
+					</deployables>
 				</configuration>
 			</plugin>
 		</plugins>
